# hotshopper

./: .gitignore  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  hotshopper-runner.py  makefile_helper.sh  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  setup.py.backup  setup_notused.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
hotshopper/: __init__.py  cli.py  constants.json  constants.py  errors.py  foodplan.py  helper.py  hotshopper.py  ingredients.py  model.py  recipes.db  recipes.py  ui.py
hotshopper/static/: add_edit_ingredient_screen.js  add_ingredient_screen.js  add_recipe_screen.js  drag_table_elements.js  edit_ingredient_screen.js  edit_recipe_screen.js  edit_shopping_list.js  hotshopper.css  hotshopper.js  ingredient_screen.js  ingredients_screen.js  print_shopping_list.js  recipe_screen.js  shopping_list.js
hotshopper/static/fontawesome_old/css/: all.css  all.min.css  brands.css  (+15 more)
hotshopper/templates/: add_edit_ingredient_screen.html  add_ingredient_screen.html  add_recipe_screen.html  base.html  edit_ingredient_screen.html  edit_recipe_screen.html  edit_shopping_list.html  foodplan.html  ingredient_screen.html  ingredients.html  main_screen.html  ontop_screens.html  print_shopping_list.html  recipe_screen.html  shopping_list.html  shopping_lists_print_preview.html
tests/: __init__.py  test_hotshopper.py
tests/func/: test_hotshopper.py
tests/unit/: conftest.py  helper.py  test_foodplan.py  test_init.py  test_model.py
(+12 files in other folders)
